syntax = "proto3";

package main;

message SearchRequest {
  string query = 1;
  int32 page_number = 2;
  int32 result_per_page = 3;
}

message SearchResponse {
  repeated Result result = 1;
}

message Result {
  string url = 1;
  string title = 2;
  string snippets = 3;
}

service SearchService {
  rpc Search (SearchRequest) returns (SearchResponse);
  rpc SearchAlt (SearchRequest) returns (SearchResponse);
}

message AccountInfo {
  string name = 1;
}

message GetAccountInfoParams {
  string id = 1;
}


service AccountService {
  rpc GetAccountInfo (GetAccountInfoParams) returns (AccountInfo);
}